--- a/docs/documentation.tex
+++ b/docs/documentation.tex
@@ -73,4 +73,23 @@ pares es $O((|V|-1)|E||V|)$ = $O(|V|^2|E|)$ = $O(|V|^4)$. Luego el coste de una 
 El algoritmo realiza $|V|$ iteraciones. Por tanto la complejidad temporal del algoritmo es $O(|V|*(|E| + |V|log|V| + |V|^4))$, 
 que es $O(|V|^5)$
 
+\section{Segunda Solución}
+
+\subsection{Idea del algoritmo}
+
+Realizamos el algoritmo de Floyd-Warshall a partir de la matriz de costos inicial (cost) para obtener la matriz de las distancias de costo mínimo entre todo par de vértices $(i,j)$, llamemos a esta matriz $fw$.
+Luego, para cada par de vértices $(v_i,v_j)$, con $i \neq j$, hallamos todos los vértices $v_k$, tal que $fw[i,j] = fw[i,k] + fw[k,j]$, estos vértices pertencen a algún
+camino de costo mínimo de $i$ a $j$, al conjunto de estos vértices para cada par $(i,j)$ llamémoslo $CCM_(i,j)$. Luego, para cada par de vértices $(v_i,v_j)$, con $i \neq j$, hallamos el número de vértices $v_p$ que cumplen que:
+$fw[i,p] + dist[p,j] = fw[i,j]$, esta es la cantidad de aristas que llegan a $j$, pertenecientes a algún camino de costo mínimo proveniente de $i$, llamemos a este número $e_(i,j)$.
+Luego hacemos un recorrido por cada par de vértices $(v_i,v_j)$ la cantidad de aristas que pertenecen a algún camino de costo mínimo de $i$ a $j$ es igual a la suma de las aristas que llegan a cada vértice $k$ perteneciente a $CCM_(i,j)$ en caminos de costo
+mínimo provenientes de $i$:
+
+$S_(v_i,v_j) = \sum e_(i,k), \forall k\in CCM_(i,j) $
+
+\subsection{Correctitud}
+
+Si una arista $(x,y)$ pertence a algún camino de costo mínimo entre $i$ y $j$, entonces: $y$ es un vértice que pertence a algún camino de costo mínimo entre $i$ y $j$ y se cumple que: 
+el costo mínimo de un camino de $i$ a $y$ sumado con el costo de un camino de costo mínimo de $y$ a $j$ es igual al costo de algún camino de costo mínimo de $i$ a $j$
+
+
 \end{document}
