--- a/docs/documentation.tex
+++ b/docs/documentation.tex
@@ -89,7 +89,6 @@ $S_(v_i,v_j) = \sum e_(i,k), \forall k\in CCM_(i,j) $
 \subsection{Correctitud}
 
 Si una arista $(x,y)$ pertence a algún camino de costo mínimo entre $i$ y $j$, entonces: $y$ es un vértice que pertence a algún camino de costo mínimo entre $i$ y $j$ y se cumple que: 
-el costo mínimo de un camino de $i$ a $y$ sumado con el costo de un camino de costo mínimo de $y$ a $j$ es igual al costo de algún camino de costo mínimo de $i$ a $j$
-
+el costo mínimo de un camino de $i$ a $y$ sumado con el costo de un camino de costo mínimo de $y$ a $j$ es igual al costo de algún camino de costo mínimo de $i$ a $j$. 
 
 \end{document}
