--- a/docs/documentation.tex
+++ b/docs/documentation.tex
@@ -90,7 +90,21 @@ $S_(v_i,v_j) = \sum e_(i,k), \forall k\in CCM_(i,j) $
 Primero demostremos que si una arista pertenece a algún camino de costo mínimo entre $i$ y $j$, el algoritmo la cuenta:
 
 Si una arista $(x,y)$ pertence a algún camino de costo mínimo entre $i$ y $j$, entonces: $y$ es un vértice que pertence a algún camino de costo mínimo entre $i$ y $j$ y se cumple que: 
-el costo mínimo de un camino de $i$ a $y$ sumado con el costo de un camino de costo mínimo de $y$ a $j$ es igual al costo de algún camino de costo mínimo de $i$ a $j$
+el costo mínimo de un camino de $i$ a $y$ sumado con el costo de un camino de costo mínimo de $y$ a $j$ es igual al costo de algún camino de costo mínimo de $i$ a $j$.
+
+Demostremos el enunciado anterior:
+
+El algoritmo de Floyd-Warshall calcula correctamente el costo del camino de costo m\'inimo entre todo par de v\'ertices $(i,j)$. 
+Sea $fw$ la matriz que devuelve el algoritmo de Floyd-Warshall. Todos los caminos de costo m\'inimo tienen el mismo costo por definici\'on 
+de camino de costo m\'inimo. Sea $P$ alg\'un camino de costo m\'inimo entre $i$ y $j$ en el cual participe el v\'ertice $y$. Los caminos de costo 
+m\'inimo poseen subestructura \'optima, es decir, para cualquier par de v\'ertices $(v,w) \in P$, el subcamino de $P$ que va de $v$ a $w$ es un camino de costo 
+m\'inimo entre $v$ y $w$. Por tanto el subcamino de $P$ de $i$ a $y$ es un camino de costo m\'inimo, luego el costo de dicho subcamino est\'a almacenado en $fw[i,y]$. 
+An\'alogamente se cumple para el subcamino de $P$ que va de $y$ a $j$ y su valor est\'a almacenado en $fw[y,j]$. Por tanto, $fw[i,y]$ es el costo 
+del camino de costo m\'inimo que va de $i$ a $y$, $f[y,j]$ es el costo del camino de costo m\'inimo que va de $y$ a $j$. Luego como $f[i,y]$ es m\'inimo y 
+$f[y,j]$ es m\'inimo, su suma es m\'inima, es decir, $fw[i,y] + fw[y,j]$ es m\'inima. El costo del camino de costo m\'inimo entre $i$ y $j$ es $fw[i,j]$  y coincide con el costo de $P$. 
+Luego en $P$ se empieza en $i$, se pasa por $y$ y luego se va a $j$, por tanto el costo de $P$ es $fw[i,y] + fw[y,j]$ y como $P$ es de costo m\'inimo entonces 
+$fw[i,j] = fw[i,y] + fw[y,j]$, con $y \in P$. Luego queda demostrado que si $y$ es un vértice que pertence a algún camino de costo mínimo entre $i$ y $j$ se cumple que: 
+el costo mínimo de un camino de $i$ a $y$ sumado con el costo de un camino de costo mínimo de $y$ a $j$ es igual al costo de algún camino de costo mínimo de $i$ a $j$. 
 
 Luego, si $(x,y)$ pertenece a algún camino de costo mínimo entre $i$ y $j$, $x,y$ pertenece a algún camino de costo mínimo entre $i$ y $y$, pues todo subcamino de un camino de costo mínimo es de costo mínimo.
 Finalmente si $(x,y)$ pertenece a algún camino de costo mínimo entre $i$ y $y$, entonces se cumple que la suma del costo de la arista $(x,y)$ con el costo de un camino de costo mínimo de $i$ a $x$ debe ser igual
